--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,6 @@
         <include src="./partials/todo.html"></include>
       </section>
     </main>
-    <script src="./index.js" type="module"></script>
+    <script src="./js/code.js" type="module"></script>
   </body>
 </html>
